# hibiki

./: Cargo.toml
.github/workflows/: release.yml
src/: board.rs  error.rs  knob.rs  main.rs  scene.rs  sound.rs  trigger.rs
