[package]
name = "hibiki"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
catppuccin-egui = { git = "https://github.com/catppuccin/egui", rev = "bcb5849" }
eframe = "0.24.1"
env_logger = "0.10.1"
rfd = "0.13.0"
rodio = "0.17.3"
ron = "0.8"
serde = { version = "1", features = ["derive"] }